# vitaclaw

./: .gitignore  AGENTS.md  BOOTSTRAP.md  CLAUDE.md  HEARTBEAT.md  LICENSE  README.md  README.zh.md  SOUL.md  _skill_catalog.json  privacy_desensitize.py  pyproject.toml  skills-manifest.json  癌症病人问诊归纳表（优上表）_v3.0(1).xlsx
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
annual-checkup-advisor/: README.md  SKILL.md
apple-health-digest/: README.zh.md  SKILL.md
bio-clinical-databases-clinvar-lookup/: usage-guide.md
bio-clinical-databases-gnomad-frequencies/: usage-guide.md
bio-clinical-databases-myvariant-queries/: usage-guide.md
bio-clinical-databases-pharmacogenomics/: usage-guide.md
bio-clinical-databases-tumor-mutational-burden/: usage-guide.md
bio-liquid-biopsy-pipeline/: usage-guide.md
blood-pressure-tracker/: README.md
caffeine-sleep-advisor/: README.md  SKILL.md
caffeine-tracker/: README.md  SKILL.md
calorie-fitness-manager/: SKILL.md
checkup-report-interpreter/: SKILL.md  checkup_report_interpreter.py
chemo-side-effect-tracker/: SKILL.md
chronic-condition-monitor/: README.md  chronic_condition_monitor.py
claims-appeals/: coworker.py
clinical-nlp-extractor/: README.md
clinical-note-summarization/: medprompt_utils.py  requirements.txt
clinical-trial-search/: SKILL.md  clinical_trial_search.py
configs/: com.vitaclaw.heartbeat.plist  openclaw.health.json5
diabetes-control-hub/: SKILL.md  test_sample.md
docs/: doctor-match-workflow.zh.md  doctor-profile-harvester.zh.md  (+16 more)
(+792 files in other folders)
